[tool.poetry]
name = "cactus"
version = "0.1.0"
description = "Cactus telegram bot from Arch Linux for Education"
authors = ["Arch Linux Repository for Education"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.23.1"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
